Fix text align in Safari (#92374) (#92571)

--- a/src/plugins/visualize/public/application/components/visualize_listing.scss
+++ b/src/plugins/visualize/public/application/components/visualize_listing.scss
@@ -16,6 +16,10 @@
   margin-left: $euiSizeS;
 }
 
+.visListingTable__titleLink {
+  text-align: left;
+}
+
 .visListingCallout {
   max-width: 1000px;
   width: 100%;
